@@ -23,9 +23,8 @@
 //
 #endregion
 
-using System;
-
 namespace Cecil.FlowAnalysis.CodeStructure {
+
 	public enum UnaryOperator {
 		None,
 		Not
