@@ -1,0 +1,3 @@
+(s as System.Collections.IEnumerable).GetEnumerator()
+goto block3
+block3: return
