@@ -2,7 +2,7 @@ block 1:
 	body:
 		IL_0000: nop
 		IL_0001: ldarg.0
-		IL_0002: castclass System.Collections.IEnumerable
+		IL_0002: isinst System.Collections.IEnumerable
 		IL_0007: callvirt System.Collections.IEnumerator System.Collections.IEnumerable::GetEnumerator()
 		IL_000c: pop
 		IL_000d: br.s IL_000f
