@@ -1,3 +1,7 @@
+2007-09-30  Jb Evain  <jbevain@novell.com>
+
+	* Support for isinst.
+
 2007-11-26	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
 	* codegen/gen-ControlFlowGraphRegression.boo
 	  codegen/CodeStructureModel.boo
@@ -13,10 +17,10 @@
 	  Cecil.FlowAnalysis.Tests/ControlFlowTestFixture.cs
 	  testcases/FlowAnalysis/StringCast.il
 	  testcases/FlowAnalysis/StringCast-afg.txt
-	  testcases/FlowAnalysis/StringCast-cfg.txt:	  
+	  testcases/FlowAnalysis/StringCast-cfg.txt:	
 	  	Support for converting castclass to CastExpression and callvirt to
 		MethodInvocationExpression.
-		
+
 2007-09-30  Jb Evain  <jbevain@novell.com>
 
 	* README: test commit script
